--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,27 +18,131 @@ button
 {
   margin-left: 5%;
   margin-top: 1%;
+  width: 30px;
+  height: 20px;
 }
 
-input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-.search_div
+.container
 {
-	width: 80%;
-	background-color: red;
-	margin-left: 10%;
-	padding: 2%;
+	width: 400px;
+	height: 400px;
+	margin: 200px auto;
+	perspective: 800px;
+}
+#cube 
+{
+  width: 400px;
+  transform-style: preserve-3d;
+  animation: rotate 15s linear infinite;
+
+
 }
 
+#cube div
+{
+  opacity: 0.8;
+  width: 400px;
+  height: 400px;
+  /*display: block;*/
+  position: absolute;
+  /*border: 2px solid black;*/
+  color: white;
+  font-size: 80px;
+  text-align: center;
+  font-family: impact;
+}
 
+ .front  
+ { 
+ 	transform: translateZ(200px); 
+ 	background: black;
+ }
+ .back   
+ { 
+ 	transform: rotateY(180deg) translateZ(200px);
+ 	background: #101010;
+ }
+.left
+{
+   transform: rotateY(-90deg) translateX(-200px);
+   transform-origin: left;
+   background:black;
+}
+.right
+{
+   transform: rotateY(90deg) translateX(200px);
+   transform-origin: right;
+   background:#101010;
+}
+
+.top
+{
+   transform: rotateX(-90deg) translateY(-200px);
+   transform-origin: top;
+   background:black;
+}
+.bottom
+{
+   transform: rotateX(90deg) translateY(200px);
+   transform-origin: bottom;
+   background:#101010;
+}
+@-webkit-keyframes rotate
+{
+	0%{transform: rotateY(0);}
+	/*50%{transform: rotateX(180deg);}*/
+	/*25%{animation-direction: alternate;}*/
+   100%{transform: rotateY(360deg);}
+}
+#keyframes rotate
+{
+   0%{transform: rotateY(0);}
+   /*50%{transform: rotateX(180deg);}*/
+  /* 25%{animation-direction: alternate;}*/
+   100%{transform: rotateY(360deg);}
+}
+#cube:hover
+ {
+    -webkit-animation-play-state: paused; /* Safari 4.0 - 8.0 */
+    animation-play-state: paused;
+}
+#cube.show-front { -webkit-transform: translateZ(-100px) rotateY(0deg); }
+/*@-webkit-keyframes front
+{
+	0%{transform: rotateY(0);}
+   100%{transform: rotateY(360deg);}
+
+}
+#keyframes front
+{
+   0%{transform: rotateY(0);}
+   100%{transform: rotateY(360deg);}
+}*/
+ button
+{
+	font-size: 16px;
+	background-color: green;
+}
+/*#cube .right  { transform: rotateY(  90deg ); }
+#cube .left   { transform: rotateY( -90deg ); }
+#cube .top    { transform: rotateX(  90deg ); }
+#cube .bottom { transform: rotateX( -90deg ); }
+
+#cube .front  { transform: rotateY(   0deg ) translateZ( 100px ); }
+#cube .back   { transform: rotateX( 180deg ) translateZ( 100px ); }
+#cube .right  { transform: rotateY(  90deg ) translateZ( 100px ); }
+#cube .left   { transform: rotateY( -90deg ) translateZ( 100px ); }
+#cube .top    { transform: rotateX(  90deg ) translateZ( 100px ); }
+#cube .bottom { transform: rotateX( -90deg ) translateZ( 100px ); }
+
+#cube.show-front  { transform: translateZ( -100px ) rotateY(    0deg ); }
+#cube.show-back   { transform: translateZ( -100px ) rotateX( -180deg ); }
+#cube.show-right  { transform: translateZ( -100px ) rotateY(  -90deg ); }
+#cube.show-left   { transform: translateZ( -100px ) rotateY(   90deg ); }
+#cube.show-top    { transform: translateZ( -100px ) rotateX(  -90deg ); }
+#cube.show-bottom { transform: translateZ( -100px ) rotateX(   90deg ); }
+
+#cube { transition: transform 1s; }*/
  /*<!-- <div class"search_results">
   {{#each result}}
    <li>
@@ -53,3 +157,19 @@ input[type=text], select {
       {{this.saved_results_results}}
    </li>
 </div> -->*/
+/*.search_div
+{
+	width: 65%;
+	background-color: red;
+	margin-left: 15%;
+	padding: 2%;
+}*/
+/*input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}*/
