--- a/views/jokes.handlebars
+++ b/views/jokes.handlebars
@@ -1,4 +1,5 @@
 
+
 <h1>Jokes of the Days</h1>
 <h2></h2>
 
@@ -6,7 +7,7 @@
   <div id="cube">
 
 
-    <div class="front"><br>Mikee  
+    <div class="front"><br>Mikee  {{jokeArray[0]}}
       <button class="front_button">Save</button>
    
     </div>
@@ -36,10 +37,3 @@
 <button class="show-back">2</button>
 <button></button>
 </p>
-
-
-
-
-
-
-
