--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 
 <h1>Jokes of the Days</h1>
-<h2></h2>
+
 
 <section class="container">
   <div id="cube">
@@ -13,7 +13,7 @@
     <div class="back"><br>Mikee
      <button class="front_button">Save</button>
     </div>
-    <div class="right"><br>
+    <div class="right"><br>index
      <button class="front_button">Save</button>
     </div>
     <div class="left"><br>Mikee
