--- a/views/jokes.handlebars
+++ b/views/jokes.handlebars
@@ -1,39 +1,20 @@
 
-
-<h1>Jokes of the Days</h1>
-<h2></h2>
-
+<h1>{{jokeArray.[0]}}</h1>
 <section class="container">
   <div id="cube">
-
-
-    <div class="front"><br>Mikee  {{jokeArray[0]}}
-      <button class="front_button">Save</button>
-   
+    <div class="front"><br>{{jokeArray.[4]}}
     </div>
-    <div class="back"><br>Mikee
-     <button class="front_button">Save</button>
+    <div class="back"><br><h4>{{jokeArray.[1]}}</h4>
     </div>
-    <div class="right"><br>
-     <button class="front_button">Save</button>
+    <div class="right"><br><h4>{{jokeArray.[2]}}</h4>
     </div>
-    <div class="left"><br>Mikee
-     <button class="front_button">Save</button>
+    <div class="left"><br>{{jokeArray.[3]}}
     </div>
-
-
-
-    <div class="top"><br>Mikee
-     <button class="front_button">Save</button>
+    <div class="top"><br>UT
     </div>
-    <div class="bottom"><br>Mikee
-     <button class="front_button">Save</button>
+    <div class="bottom"><br>BOOT CAMP
     </div>
   </div>
 </section>
 <hr>
-<p>
-<button class="show-front">1</button>
-<button class="show-back">2</button>
-<button></button>
-</p>
+<button class="show-front" >ReScrape</button>
