--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,26 @@
-body
+html
 {
-	background-color: blue;
+  min-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body /*stolen form https://www.pantz.org/*/
+{
+	background-color:#556;
+background-image: linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a), 
+linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a);
+background-size:80px 140px;
+background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 }
 h1
 {
 	text-align: center;
+  font-size: 60px;
 }
 h2
 {
@@ -13,13 +29,6 @@ h2
 .label 
 {
   font-weight: bold;
-}
-button
-{
-  margin-left: 5%;
-  margin-top: 1%;
-  width: 30px;
-  height: 20px;
 }
 
 .container
@@ -34,8 +43,6 @@ button
   width: 400px;
   transform-style: preserve-3d;
   animation: rotate 15s linear infinite;
-
-
 }
 
 #cube div
@@ -43,13 +50,13 @@ button
   opacity: 0.8;
   width: 400px;
   height: 400px;
-  /*display: block;*/
   position: absolute;
-  /*border: 2px solid black;*/
   color: white;
-  font-size: 80px;
+  font-size: 30px;
   text-align: center;
   font-family: impact;
+  border: 5%;
+
 }
 
  .front  
@@ -90,86 +97,32 @@ button
 @-webkit-keyframes rotate
 {
 	0%{transform: rotateY(0);}
-	/*50%{transform: rotateX(180deg);}*/
-	/*25%{animation-direction: alternate;}*/
-   100%{transform: rotateY(360deg);}
+  100%{transform: rotateY(360deg);}
 }
 #keyframes rotate
 {
    0%{transform: rotateY(0);}
-   /*50%{transform: rotateX(180deg);}*/
-  /* 25%{animation-direction: alternate;}*/
    100%{transform: rotateY(360deg);}
 }
 #cube:hover
  {
-    -webkit-animation-play-state: paused; /* Safari 4.0 - 8.0 */
+    -webkit-animation-play-state: paused; 
     animation-play-state: paused;
 }
-#cube.show-front { -webkit-transform: translateZ(-100px) rotateY(0deg); }
-/*@-webkit-keyframes front
-{
-	0%{transform: rotateY(0);}
-   100%{transform: rotateY(360deg);}
-
+#cube.show-front 
+{ -webkit-transform: translateZ(-100px) rotateY(0deg); 
 }
-#keyframes front
-{
-   0%{transform: rotateY(0);}
-   100%{transform: rotateY(360deg);}
-}*/
- button
+
+button
 {
 	font-size: 16px;
 	background-color: green;
 }
-/*#cube .right  { transform: rotateY(  90deg ); }
-#cube .left   { transform: rotateY( -90deg ); }
-#cube .top    { transform: rotateX(  90deg ); }
-#cube .bottom { transform: rotateX( -90deg ); }
-
-#cube .front  { transform: rotateY(   0deg ) translateZ( 100px ); }
-#cube .back   { transform: rotateX( 180deg ) translateZ( 100px ); }
-#cube .right  { transform: rotateY(  90deg ) translateZ( 100px ); }
-#cube .left   { transform: rotateY( -90deg ) translateZ( 100px ); }
-#cube .top    { transform: rotateX(  90deg ) translateZ( 100px ); }
-#cube .bottom { transform: rotateX( -90deg ) translateZ( 100px ); }
-
-#cube.show-front  { transform: translateZ( -100px ) rotateY(    0deg ); }
-#cube.show-back   { transform: translateZ( -100px ) rotateX( -180deg ); }
-#cube.show-right  { transform: translateZ( -100px ) rotateY(  -90deg ); }
-#cube.show-left   { transform: translateZ( -100px ) rotateY(   90deg ); }
-#cube.show-top    { transform: translateZ( -100px ) rotateX(  -90deg ); }
-#cube.show-bottom { transform: translateZ( -100px ) rotateX(   90deg ); }
-
-#cube { transition: transform 1s; }*/
- /*<!-- <div class"search_results">
-  {{#each result}}
-   <li>
-    {{this.search_results}}
-   </li>
-
-</div>
-
-<div class"saved_results">
-  {{#each result}}
-   <li>
-      {{this.saved_results_results}}
-   </li>
-</div> -->*/
-/*.search_div
+button
 {
-	width: 65%;
-	background-color: red;
-	margin-left: 15%;
-	padding: 2%;
-}*/
-/*input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}*/
+  margin-left: 5%;
+  margin-top: 1%;
+  width: 90px;
+  height: 30px;
+}
+
